# RestX-Plugin

./: .gitignore  .gitmodules  CMakeLists.txt  build_dependencies.sh  config.json  package.json
src/: CMakeLists.txt  Plugin.cpp
src/lib/: CMakeLists.txt
src/lib/Config/: CMakeLists.txt  Config.cpp  Config.h
src/lib/DataManipulator/: CMakeLists.txt  DataManipulator.cpp  DataManipulator.h
src/server/: CMakeLists.txt  Server.cpp  Server.h
src/server/routes/: CMakeLists.txt
src/server/routes/DataRefRoutes/: CMakeLists.txt  DataRefRoutes.cpp  DataRefRoutes.h
src/server/routes/ErrorHandlerRoutes/: CMakeLists.txt  ErrorHandlerRoutes.cpp  ErrorHandlerRoutes.h
